# GameBot

./: .gitignore  LICENSE  pyproject.toml  readme.md  run_app.py
.devcontainer/: devcontainer.json
src/Cowculator/: app.py
src/bully_bot/: app.py
src/gamebot/: app.py
